--- a/D002/style.css
+++ b/D002/style.css
@@ -28,7 +28,7 @@ nav>p#header {
     color: black;
 }
 
-span {
+nav>p>span {
     color: rgb(255, 123, 0);
     font-weight: bold;
 }
@@ -44,3 +44,25 @@ main {
     padding-top: 50px;
     color: gray;
 }
+
+main>h1 {
+    font-size: 30px;
+    font-weight: 549.9;
+    color: rgb(117, 117, 117);
+    margin-bottom: 40px;
+}
+
+main>div>p {
+    color: black;
+    font-size: 15px;
+}
+
+.buttondefault {
+    height: 50px;
+    width: 100px;
+    background-color: lightgray;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.spanbutton {}
