--- a/D002/style.css
+++ b/D002/style.css
@@ -40,7 +40,7 @@ nav>p {
 }
 
 main {
-    margin-left: 350px;
+    margin-left: 300px;
     padding-top: 50px;
     color: gray;
 }
@@ -54,15 +54,48 @@ main>h1 {
 
 main>div>p {
     color: black;
-    font-size: 15px;
+    font-size: 14px;
+}
+
+.textdefault {
+    margin-bottom: 20px;
 }
 
 .buttondefault {
-    height: 50px;
-    width: 100px;
-    background-color: lightgray;
+    height: 45px;
+    width: 90px;
+    background-color: rgba(211, 211, 211, 0.603);
     border-radius: 10px;
     text-align: center;
+    position: absolute;
+    color: rgb(92, 91, 91);
 }
 
-.spanbutton {}
+.spanbutton {
+    position: absolute;
+    top: 50%;
+    left: 23%;
+    transform: translateY(-10px);
+    font-weight: bold;
+
+}
+
+.divhoverdefault {
+    margin-left: 180px;
+    transform: translateY(-35px)
+}
+
+.textdefault {
+    transform: translateY(10px);
+}
+
+#texthover1 {
+    color: rgb(160, 159, 159);
+
+}
+
+#hover1:hover {
+    background-color: gray;
+    color: black;
+    font-weight: bolder;
+}
