--- a/D002/style.css
+++ b/D002/style.css
@@ -12,9 +12,12 @@ body {
     color: black;
 }
 
+
+
+/*CORPO LATERAL ESQUERDO*/
 nav {
-    width: 150px;
-    height: 400vh;
+    width: 130px;
+    height: 250vh;
     float: left;
 
     background-color: rgba(230, 230, 230, 0.26);
@@ -39,6 +42,11 @@ nav>p {
     color: gray;
 }
 
+
+
+
+
+/*CORPO PRINCIPAL*/
 main {
     margin-left: 300px;
     padding-top: 50px;
@@ -104,6 +112,7 @@ main>div>p {
     margin-top: 60px;
 }
 
+/*2 linha*/
 #bgwborblu,#colblue{
     background-color: white;
     color: rgb(100, 100, 248);
@@ -116,6 +125,7 @@ main>div>p {
     border: 1px solid rgb(100, 100, 248);
 }
 
+/*3 linha*/
 #noborder,#noborderhover{
     background-color: white;
     color: rgb(100, 100, 248);
@@ -125,8 +135,9 @@ main>div>p {
     background-color: rgba(127, 160, 252, 0.233);
 }
 
+/*4 linha*/
 #bgbluecolwhite{
-    width: 80px;
+    width: 90px;
     color: white;
     background-color: rgba(0, 26, 255, 0.705);
 }
@@ -143,14 +154,16 @@ main>div>p {
     background-color: white;
 }
 
-#bgbluecolwhite2{
-    width: 80px;
+/*5 linha*/
+#bgbluecolwhite3{
+    width: 100px;
     color: white;
     background-color: rgba(0, 26, 255, 0.705);
 }
 
-#bgbluecolwhite3{
-    width: 100px;
+/*6 linha*/
+#bgbluecolwhite2{
+    width: 80px;
     color: white;
     background-color: rgba(0, 26, 255, 0.705);
 }
@@ -170,3 +183,37 @@ main>div>p {
     position: absolute;
     left: 70%;
 }
+
+/*7 linha*/
+#sizesm{
+    width: 70px;
+    color: white;
+    background-color: rgba(0, 26, 255, 0.705);
+}
+
+#textsizesm{
+    left: 20%;
+}
+
+#textsizelg{
+    left: 26%;
+}
+
+#sizemd{
+    width: 95px;
+    color: white;
+    background-color: rgba(0, 26, 255, 0.705);
+}
+
+#sizelg{
+    width: 100px;
+    height: 50px;
+    color: white;
+    background-color: rgba(0, 26, 255, 0.705);
+}
+
+.divhoverright{
+    margin-left: 400px;
+    transform: translateY(-70px)
+}
+
