--- a/D003/style.css
+++ b/D003/style.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0em;
+    padding: 0em;
 }
 /*
 - Mobile: 375px
@@ -80,7 +80,7 @@ p#lorem{
     width: 2.5em;
     height: 2.5em;
 
-    padding: 1px;
+    padding: 0.0625em;
     display: inline-block;
 
     background-color: var(--ColorBlue);
@@ -104,19 +104,19 @@ p#lorem{
 #submit{
     width: 18.4em;
     height: 1.4em;
-    border-radius: 40px;
+    border-radius: 2.5em;
 
     margin-top: 1.3em;
     background-color: var(--ColorOrange);
 
     text-align: center;
-    padding: 12.6px;
+    padding: 0.7875em;
     font-size: 0.85em;
 }
 
 #ssub{
     position: absolute;
-    transform: translateY(4px);
+    transform: translateY(0.25em);
     left: 10em;
 }
 
@@ -148,6 +148,8 @@ p#b5:hover{
 
 #submit:hover{
     cursor: pointer;
+    color: var(--ColorOrange);
+    background-color: white;
 }
 
 /*thanks-you-state*/
@@ -159,24 +161,24 @@ p#b5:hover{
 #imgthanks{
     margin: auto;
     display: block;
-    width: 145px;
-    margin-top: 35px;
-    margin-left: 65px;
+    width: 9.0625em;
+    margin-top: 2.1875em;
+    margin-left:  4.0625em;
 }
 
 p#result{
     margin: auto;
-    margin-top: 25px;
+    margin-top:  1.5625em;
 
     color: #d18512;
 
     background-color: var(--ColorBlue);
-    border-radius: 35px;
-    padding: 7px 15px;
+    border-radius: 2.1875em;
+    padding: 0.4375em 0.9375em;
 
     display: inline-block;
 
-    font-size: 14px;
+    font-size: 0.875em;
     text-align: center;
     transform: translateX(4em);
 }
@@ -184,9 +186,9 @@ p#result{
 #thx{
     text-align: center;
     font-weight: bold;
-    margin-top: 25px;
-    font-size: 24px;
-    transform: translateX(-13px);
+    margin-top: 1.5625em;
+    font-size: 1.5em;
+    transform: translateX(-0.8125em);
     
 }
 
@@ -194,12 +196,12 @@ p#result{
     color: var(--ColorMGrey);
     text-align: center;
 
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 0.875em;
+    line-height: 1.3125rem;
     
-    margin-right: 0px;
-    margin-left: 0px;
-    width: 279px;
+    margin-right: 0em;
+    margin-left: 0em;
+    width: 17.4375rem;
 
     position: absolute;
     left: 8%
