add css to header and create inputs

--- a/D004/style.css
+++ b/D004/style.css
@@ -12,13 +12,14 @@
     --font-Poppins: 'Poppins';
     --Pink: hsl(0, 100%, 74%);
     --Green: hsl(154, 59%, 51%);
-    --Blue: Blue: hsl(248, 32%, 49%);
+    --Blue:  hsl(248, 32%, 49%);
     --DarkBlue: hsl(249, 10%, 26%);
     --GrayishBlue:hsl(246, 25%, 77%);
 }
 
 body{
     font-family: var(--font-Poppins), Helvetica, sans-serif;
+    background: var(--Pink) url("images/bg-intro-desktop.png") repeat;
 }
 /*
 - Mobile: 375px
@@ -28,8 +29,45 @@ body{
 */
 
 main{
-    background: var(--Pink) url("images/bg-intro-desktop.png") repeat;
+
     height: 100vh;
     color: white;
 }
 
+.right{
+    margin-left: 731px;
+    width: 540px;
+}
+
+section{
+    background-color: white;
+    height: 474px;
+
+    color: var(--DarkBlue);
+
+    border-radius: 10px;
+    box-shadow: 1px 9px 1px rgba(0, 0, 0, 0.116);
+}
+
+header{
+    background-color: var(--Blue);
+    text-align: center;
+    font-weight: 250;
+    font-size: 15.6px;
+    margin-top: 123px;
+    margin-bottom: 25px;
+    padding: 17px 0px;
+
+    border-radius: 0.7em;
+    box-shadow: 1px 8px 1px rgba(0, 0, 0, 0.116);
+}
+
+#tryheader{
+    font-weight: 500;
+}
+
+input{
+    width: 500px;
+    text-align: center;
+    margin: auto;
+}
