--- a/D005/style.css
+++ b/D005/style.css
@@ -19,13 +19,26 @@
  --HeaderOutline: hsl(217, 16%, 45%);
 
 /*
- - Radial Gradient: hsl(214, 47%, 23%) to hsl(237, 49%, 15%)
+ - Radial Gradient:c to hsl(237, 49%, 15%)
 */
 }
 
 body{
-    background-color: black;
+    background: no-repeat;
+    background-image: linear-gradient(hsl(214, 47%, 23%),hsl(237, 49%, 15%));
+    width: 100vw;
+    height: 100vh;
+
+
     color: white;
 
     font-family: 'Barlow Semi Condensed';
+  }
+
+  /*HEADER*/
+  header{
+    display: flex;
+    border: 1px solid var(--HeaderOutline);
+    margin: auto;
+
   }
