Update D001 and D002, add a footer

--- a/D002-PaginaPerfumeUnico/estilos/small-cellphone.css
+++ b/D002-PaginaPerfumeUnico/estilos/small-cellphone.css
@@ -58,6 +58,10 @@ The designs were created to the following widths:
         width: 250px;
         height: 45px;
     }
+
+    footer{
+        display: none;
+    }
 }
 
 
