add footer to D004

--- a/D004-signUp-form/style.css
+++ b/D004-signUp-form/style.css
@@ -210,3 +210,13 @@ aside > h1,p{
         display: none;
     }
 }
+
+footer{
+    margin-top: 1vh;
+    text-align: center;
+}
+
+footer > a{
+    text-decoration: none;
+    color: blue;
+}
